c4prj3_finish/grade.txt
Grading at Thu Apr  4 16:59:33 UTC 2019
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
eval.c: In function ‘build_hand_from_match’:
eval.c:225:3: error: statement with no effect [-Werror=unused-value]
   for(i<5 && j<idx; i++, j++) {
   ^
eval.c:225:29: error: expected ‘;’ before ‘)’ token
   for(i<5 && j<idx; i++, j++) {
                             ^
eval.c:230:5: error: statement with no effect [-Werror=unused-value]
     for(i<5; i++, j++) {
     ^
eval.c:230:22: error: expected ‘;’ before ‘)’ token
     for(i<5; i++, j++) {
                      ^
cc1: all warnings being treated as errors
<builtin>: recipe for target 'eval.o' failed
make: *** [eval.o] Error 1
make failed

Overall Grade: F
